# Geonamica-Optimisation

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.95923b0  Commands.txt  GeonamicaNSGAII.cpp  GeonamicaNSGAII.hpp  GeonamicaPolicyCheckpoints.cpp  GeonamicaPolicyCheckpoints.hpp  GeonamicaPolicyOptimiser.cpp  GeonamicaPolicyOptimiser.hpp  GeonamicaPolicyParameters.cpp  GeonamicaPolicyParameters.hpp  GeonamicaPolicyPostProcess.cpp  GeonamicaPolicyPostProcess.hpp  GeonamicaPolicyUtility.hpp  HomeOpenSUSEVariables.txt  MainPar.cpp  MainSer.cpp  Pathify.cpp  Pathify.hpp  Paths for dependencies in CMake macbook.txt  PhoenixVariables.txt  README.md  TestZoneDVs.cpp  UserHomeDirectory.hpp  ZonalPolicyOptimiser.hpp  ZonalPolicyUtility.hpp
Deprecated/: MainPar.cpp  MainSer.cpp
Documentation/: Overview.docx
EvaluatorModules/: CMakeLists.txt  ImplementationCost.cpp  ImplementationCost.hpp  ModuleAPI.cpp  ModuleAPI.hpp  ZonalCostingCellCount.cpp  ZonalCostingCellCount.h
EvaluatorModules/boost_placeholder/dll/: alias.hpp  shared_library.hpp
EvaluatorModules/boost_placeholder/dll/detail/posix/: path_from_handle.hpp  program_location_impl.hpp  shared_library_impl.hpp
GUI/: CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.h  ConfigPages.cpp  ConfigPages.h  DecisionSpaceChartsWidget.cpp  DecisionSpaceChartsWidget.hpp  FrontQtSignal.cpp  FrontQtSignal.h  GeonamicOptGUICheckpoints.cpp  GeonamicaOptGUICheckpoints.cpp  GeonamicaOptGUICheckpoints.h  GeonamicaPolicyParametersQtMetaTyping.cpp  GeonamicaPolicyParametersQtMetaTyping.hpp  MainWindow.cpp  MainWindow.hpp  MetricQtSignal.cpp  MetricQtSignal.h  OptimiserController.cpp  OptimiserController.h  OptimiserWorker.cpp  OptimiserWorker.h  ParetoFrontQtChart.cpp  ParetoFrontQtChart.h  PathifyQt.cpp  PathifyQt.hpp  QtDialogueCheckpoint.cpp  QtDialogueCheckpoint.h  RandomVector.hpp  TimeSeriesQtChart.cpp  configdialog.cpp  configdialog.h  main.cpp  mdi.qrc  pages.cpp  pages.h
GUI/Deprecated/: optimisationwizardpage.cpp  optimisationwizardpage.h  optimisationwizardpage.ui  optimiserthread.cpp  optimiserthread.h
GUI/Help/: .~lock.LogFileForPostOptimisationAnalysis.html#  .~lock.XPathDVs.html#  .~lock.ZonalOptimisation.html#  DVModules.html  EvalModules.html  GeonamicaCommand.html  GeoprojectFile.html  LogFileForObjectives.html  LogFileForPostOptimisationAnalysis.html  ObjMap.html  SaveMaps.html  WindDriveLetter.html  WineCmd.html  WinePrefixPath.html  WinePrefixPath2.html  Workingdirectory.html  XPathDVs.html  ZonalOptimisation.html  timeout.html  ~$nePrefixPath.html
GUI/Help/EvalModules.fld/: filelist.xml
GUI/Help/ObjMap.fld/: filelist.xml  header.html
GUI/Help/SaveMaps.fld/: filelist.xml  header.html
GUI/Help/WinePrefixPath.fld/: filelist.xml  header.html
GUI/Help/XPathDVs.fld/: filelist.xml
GUI/Help/ZonalOptimisation.fld/: filelist.xml
GUI/Help/timeout.fld/: filelist.xml
Modules/: CMakeLists.txt
Modules/DVModules/: CMakeLists.txt  DVModuleAPI.hpp
Modules/EvaluatorModules/: CMakeLists.txt  EvaluatorModuleAPI.hpp  ImplementationCost.hpp  ZonalCostingCellCount.cpp  ZonalCostingCellCount.h
Modules/boost_placeholder/dll/: import.hpp
Test UnHarmed Model scripts/: Error from GeonCmd.txt  timing.ps1  timing2.ps1
